                meditor version 5.4.7


  In this release:

    * Improve search/replace dialog

    * Upgrades:

      org.scala-lang#scala-compiler_3;3.5.1
      net.sourceforge.jscl-meditor#jscl;2.4.17


  In version 5.4.6:

    * A new Renderer parameter to accomodate for type class style programming

    * Upgrade to Fop 2.9, Batik 1.17 and Xalan 2.7.3 (require Java 8)

    * Tested script engines:

      org.scala-lang#scala-compiler_3;3.3.1
      org.matheclipse#matheclipse-script;3.0.0

    * Tested libraries:

      com.github.rjolly#scas_3;3.0
      de.uni-mannheim.rz.krum#jas;2.7.200


  In version 5.4.4:

    * New script engine/library:

      net.sourceforge.jscl-meditor#jscl;2.4.15

    * Script engine output is rendered automatically if implementing jscl.editor.rendering.MathObject from:

      net.sourceforge.jscl-meditor#rendering;1.1

    * Graphs are rendered automatically if implementing org.jdesktop.swingx.JXGraph.Plot (or array thereof) from:

      org.swinglabs#swingx-core;1.6.2-2

    * Upgrade to txt2xhthml 4.1


  In version 5.3.3:

    * Externalize graph as jscl.editor.Graph

    * Upgrade to Snuggletex 1.3.0

    * Tested script engines:

      org.scala-lang#scala-compiler;2.11.0-M6
      org.python#jython-standalone;2.7.2b3
      org.jetbrains.kotlin#kotlin-scripting-jsr223;1.3.72 (mutually exclusive with Rings due to Trove4J version mismatch)

    * Tested libraries:

      com.github.rjolly#scas_2.11.0-M6;2.1.1
      org.apache.commons#commons-math3;3.6.1


  In version 5.2.1:

    * Upgrade to Jeuclid 3.1.14, Fop 2.4 and Batik 1.12

    * Plot based on SwingX JXGraph

    * Tested script engines:

      ch.epfl.lamp#dotty-compiler_0.22;0.22.0-RC1 (requires Java 8)

    * Tested libraries:

      de.uni-mannheim.rz.krum#jas;2.6.5988 (need to replace Log4j 2.5 by 2.13.0 for the library to work with Dotty)
      org.apache.logging.log4j#log4j-core;2.13.0
      org.apache.logging.log4j#log4j-api;2.13.0