@@ -16,7 +16,7 @@
     </publications>
     <dependencies>
         <dependency org="net.java.linoleum" name="complete" rev="1.6" conf="runtime->default"/>
-        <dependency org="net.sourceforge.jscl-meditor" name="meditor" rev="5.4.7" conf="runtime->default"/>
+        <dependency org="net.sourceforge.jscl-meditor" name="meditor" rev="5.4.8" conf="runtime->default"/>
         <dependency org="net.sourceforge.jscl-meditor" name="contents" rev="1.0" conf="runtime->default"/>
         <dependency org="net.sourceforge.jscl-meditor" name="jscl" rev="2.4.18" conf="runtime->default"/>
         <dependency org="org.beanshell" name="bsh" rev="2.0b5" conf="runtime->default"/>
