@@ -15,7 +15,7 @@ script engines
       org.beanshell#bsh;2.0b5
       org.jruby#jruby-complete;9.1.17.0
       org.python#jython-standalone;2.7.2b3
-      org.scala-lang#scala3-compiler_3;3.5.1 (requires Java 8)
+      org.scala-lang#scala3-compiler_3;3.7.3 (requires Java 8)
       org.jetbrains.kotlin#kotlin-scripting-jsr223;1.3.72 (mutually exclusive with Rings due to Trove4J version mismatch)
       org.matheclipse#matheclipse-script;3.0.0 (requires Java 11)
       com.github.rjolly#jshellscriptengine;1.0 (requires Java 9)
@@ -24,7 +24,7 @@ script engines
 
 libraries
 
-      com.github.rjolly#scas_3;3.0
+      com.github.rjolly#scas_3;3.1
       net.sourceforge.jscl-meditor#jscl;2.4.18
       de.uni-mannheim.rz.krum#jas;2.7.200 (requires Java 11)
       org.apache.commons#commons-math3;3.6.1
