@@ -6,7 +6,7 @@
   <groupId>net.sourceforge.jscl-meditor</groupId>
   <artifactId>meditor</artifactId>
   <packaging>jar</packaging>
-  <version>5.4.7</version>
+  <version>5.4.8</version>
   <url>http://jscl-meditor.sourceforge.net/</url>
   <description>java symbolic computing library and mathematical editor</description>
   <licenses>
