@@ -16,12 +16,8 @@
     </publications>
     <dependencies>
         <dependency org="net.sourceforge.jscl-meditor" name="base" rev="1.0" conf="runtime->default"/>
-        <dependency org="com.github.rjolly" name="scas.application_3" rev="3.0" conf="runtime->default">
-            <exclude org="de.uni-mannheim.rz.krum" module="jas" name="*" type="*" ext="*" conf="" matcher="exact"/>
-        </dependency>
-        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.5.1" conf="runtime->default"/>
-        <dependency org="de.uni-mannheim.rz.krum" name="jas" rev="2.7.200" conf="runtime->default">
-            <exclude org="org.apache.logging.log4j" module="log4j-api" name="*" type="*" ext="*" conf="" matcher="exact"/>
-        </dependency>
+        <dependency org="com.github.rjolly" name="scas.application_3" rev="3.1" conf="runtime->default"/>
+        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.7.3" conf="runtime->default"/>
+        <dependency org="org.scala-lang" name="scala2-library-tasty-experimental_3" rev="3.7.3" conf="runtime->default"/>
     </dependencies>
 </ivy-module>
