@@ -39,29 +39,17 @@
     <dependency>
       <groupId>com.github.rjolly</groupId>
       <artifactId>scas.application_3</artifactId>
-      <version>3.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>de.uni-mannheim.rz.krum</groupId>
-          <artifactId>jas</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>3.1</version>
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala3-compiler_3</artifactId>
-      <version>3.5.1</version>
+      <version>3.7.3</version>
     </dependency>
     <dependency>
-      <groupId>de.uni-mannheim.rz.krum</groupId>
-      <artifactId>jas</artifactId>
-      <version>2.7.200</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-api</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala2-library-tasty-experimental_3</artifactId>
+      <version>3.7.3</version>
     </dependency>
   </dependencies>
 </project>
