@@ -1,7 +1,18 @@
-                meditor version 5.4.7
+                meditor version 5.4.8
 
 
   In this release:
+
+    * File->New resets script engine
+
+    * Upgrades:
+
+      com.github.rjolly#scas_3;3.1
+      org.scala-lang#scala-compiler_3;3.7.3
+      net.sourceforge.jscl-meditor#jscl;2.4.18
+
+
+  In this version 5.4.7:
 
     * Improve search/replace dialog
 
